--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#34B92C</color>
+    <color name="red">#FF1A1A</color>
+
 
     <color name="primary_color">#F86E25</color>
     <color name="primary_white">#EEEFF2</color>
     <color name="primary_dark">#021B44</color>
-    <color name="primary_grey">#EEE2FE</color>
+    <color name="primary_grey">#c5cad3</color>
 
     <color name="background_color">#FFD8C4</color>
 </resources>
