--- a/app/src/main/res/layout/customer_order_ongoing_detail.xml
+++ b/app/src/main/res/layout/customer_order_ongoing_detail.xml
@@ -52,18 +52,18 @@
             android:paddingBottom="10dp"
             android:background="@color/white"
             app:layout_constraintTop_toBottomOf="@+id/activity_customer_order_detail_cl_shipping_info2">
+
             <TextView
                 android:id="@+id/activity_customer_order_detail_tv_customer_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:text="Đơn hàng"
                 android:textColor="#000000"
-                android:layout_marginStart="16dp"
                 android:textSize="18dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                tools:ignore="NotSibling" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/activity_customer_order_detail_appCompatImageButton"
@@ -74,8 +74,7 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_phone"
                 app:layout_constraintEnd_toStartOf="@+id/activity_customer_order_detail_appCompatImageButton2"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                tools:ignore="NotSibling" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/activity_customer_order_detail_appCompatImageButton2"
@@ -86,8 +85,7 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_print_48px"
                 app:layout_constraintEnd_toStartOf="@+id/activity_customer_order_detail_appCompatImageButton3"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                tools:ignore="NotSibling" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/activity_customer_order_detail_appCompatImageButton3"
@@ -98,8 +96,7 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_sms_48px"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                tools:ignore="NotSibling" />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -138,12 +135,13 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/activity_customer_order_detail_rcvOrder"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:background="@color/white"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/activity_customer_order_detail_cl_shipping_info" />
+            android:id="@+id/activity_customer_order_detail_rcvOrder"
+            android:layout_width="414dp"
+            android:layout_height="540dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/activity_customer_order_detail_cl_shipping_info" />
 
 
 
@@ -162,38 +160,34 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginBottom="15dp"
                 android:paddingTop="13dp"
                 android:text="3 Món"
                 android:textSize="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/activity_customer_order_detail_btn_accept"
-                app:layout_constraintStart_toStartOf="@+id/activity_customer_order_detail_constraintLayout2" />
+                app:layout_constraintStart_toStartOf="@+id/activity_customer_order_detail_constraintLayout2"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/activity_customer_order_detail_tv_93"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
                 android:paddingTop="13dp"
                 android:text="THÀNH TIỀN: "
                 android:textSize="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/activity_customer_order_detail_btn_accept"
-                app:layout_constraintEnd_toStartOf="@+id/activity_customer_order_detail_tv_total" />
+                app:layout_constraintEnd_toStartOf="@+id/activity_customer_order_detail_tv_total"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/activity_customer_order_detail_tv_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
                 android:paddingTop="10dp"
-                android:textColor="@color/primary_dark"
-                android:textStyle="bold"
                 android:text="857.858 đ"
+                android:textColor="@color/primary_dark"
                 android:textSize="20dp"
-                app:layout_constraintBottom_toTopOf="@+id/activity_customer_order_detail_btn_accept"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                tools:ignore="UnknownId" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <android.widget.Button
                 android:id="@+id/activity_customer_order_detail_btn_cancel"
