--- a/app/src/main/res/layout/activity_seller_order_detail.xml
+++ b/app/src/main/res/layout/activity_seller_order_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".seller.order_detail.SellerOrderDetailActivity">
+    tools:context=".models.seller.order_detail.SellerOrderDetailActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
