--- a/app/src/main/res/layout/fragment_seller_add_new_store.xml
+++ b/app/src/main/res/layout/fragment_seller_add_new_store.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".seller.store_selection.SellerAddNewStoreFragment"
+    tools:context=".models.seller.store_selection.SellerAddNewStoreFragment"
     >
 
 
