--- a/app/src/main/res/layout/fragment_seller_history_order.xml
+++ b/app/src/main/res/layout/fragment_seller_history_order.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".seller.store_management.SellerOrder.history_order.SellerHistoryOrderFragment"
+    tools:context=".models.seller.store_management.SellerOrder.history_order.SellerHistoryOrderFragment"
     android:background="@color/background_color">
 
     <androidx.recyclerview.widget.RecyclerView
