--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.yumfood.seller.store_management.SellerOrder.SellerOrderFragment"
+        android:name="com.example.yumfood.models.seller.store_management.SellerOrder.SellerOrderFragment"
         android:label="@string/trangchu"
         tools:layout="@layout/fragment_seller_order" />
 
