--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.example.yumfood.seller.store_selection.SellerViewStoreFragment"
+        android:name="com.example.yumfood.models.seller.store_selection.SellerViewStoreFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_seller_view_store">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.example.yumfood.seller.store_selection.SellerAddNewStoreFragment"
+        android:name="com.example.yumfood.models.seller.store_selection.SellerAddNewStoreFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_seller_add_new_store">
 
