Revert "Merge branch 'main' of https://github.com/ducthai1/NT118_MOBILE_PROJECT"
This reverts commit 760e068351f6f10b6c42f030c49145e6648617f0, reversing
changes made to f8e501e01e20dfbafba4cdb3bf8212233ac4172d.

--- a/app/src/main/res/layout/fragment_seller_view_store.xml
+++ b/app/src/main/res/layout/fragment_seller_view_store.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".models.seller.store_selection.SellerViewStoreFragment"
+    tools:context=".seller.store_selection.SellerViewStoreFragment"
     android:layout_marginTop="35dp">
 
     <LinearLayout
