--- a/app/src/main/res/layout/fragment_seller_confirm_order.xml
+++ b/app/src/main/res/layout/fragment_seller_confirm_order.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".models.seller.store_management.SellerOrder.confirm_order.SellerConfirmOrderFragment"
+    tools:context=".seller.store_management.SellerOrder.confirm_order.SellerConfirmOrderFragment"
     android:background="@color/background_color">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_confirm_order_rcv_order"
